# CMake_tutorials

CMake_generate_shared_objects/: CMakeLists.txt  main.cpp
CMake_generate_shared_objects/lib/: CMakeLists.txt  sum.cpp
CMake_generate_shared_objects/lib/calc/: sum.h
CMake_library_directories/: CMakeLists.txt  main.cpp
CMake_library_directories/math/: CMakeLists.txt
CMake_library_directories/math/include/math/: addition.h  division.h
CMake_library_directories/math/src/: addition.cpp  division.cpp
CMake_library_directories/print/: CMakeLists.txt
CMake_library_directories/print/include/print/: print.h
CMake_library_directories/print/src/: print.cpp
